# probly

./: .buildinfo  .gitignore  .gitignore.save  .pr-  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Ensemble_Transformation.ipynb  LICENSE  MANIFEST.in  README.md  advanced_topics.html  api.html  build_warnings.txt  contributing.html  contributing_to_probly.html  core_concepts.html  et --hard 63e75d0  evidential.html  evidential_methods.html  examples.html  examples_and_tutorials.html  faq.html  genindex.html  h  hidden_index.html  index.html  installation.html  introduction.html  main_components.html  methods.html  objects.inv  plot_check.py  plot_check_line.py  plotting_tutorial.ipynb  py-modindex.html  pyproject.toml  references.html  run_al.sh  run_al_tabular.sh  (+12 more)
.github/: CONTRIBUTING.md  (+1 more)
experiments/: README.md  pyproject.toml
experiments/core/: __init__.py  calibration.py  correctness.py  entailment.py  llm_judge.py  paths.py  semantic_entropy.py
experiments/first_order_data/: README.md  conformal_eval.py  dcic_ensemble_pipeline.py  image_entmax_pipeline_simple.py  image_results.py  install_dcic_datasets.py  pyproject.toml  run_dcic_ensemble.py  run_image_entmax_simple.py  summarize_dcic_ensemble_results.py  utils.py
experiments/gemma/: README.md  __init__.py  chat.py  download.py  interaction.py  pyproject.toml  run_calibration.py  run_semantic_entropy.py
experiments/gemma/calibration/: __init__.py  analyze.py  generate.py  plot_calibration.py  run_all.py  run_experiment.py  run_llm_judge.py
experiments/gemma/experiments/: chat.py  download.py  semantic_entropy.py  spectral_uncertainty.py
experiments/gemma/experiments/calibration/: analyze.py  generate.py  run_all.py
experiments/gemma/semantic_entropy/: __init__.py  run.py
experiments/gemma/src/gemma_experiment/: __init__.py  calibration.py  clarification.py  correctness.py  embeddings.py  entailment.py  generation.py  paths.py  semantic_entropy.py  setup.py  spectral_uncertainty.py
experiments/gpn_uncertainty/: .gitignore  README.md  pyproject.toml
experiments/gpn_uncertainty/assets/: amazon_photo_gephi_layout.npy
experiments/gpn_uncertainty/scripts/: run_gpn_demo.py
experiments/gpn_uncertainty/src/gpn_uq/: __init__.py  demo.py
experiments/gpn_uncertainty/tests/: test_smoke.py
experiments/river_uncertainty/: .gitignore  PLAN_river_into_probly.md  README.md  pyproject.toml  validate_river.py  validate_river_regression.py
experiments/river_uncertainty/experiments/: 01_stream_response.py  02_ensemble_size_ablation.py  03_uncertainty_drift_detector.py  04_deep_stream_response.py  05_deep_drift_detector.py  run_all.py
experiments/river_uncertainty/results/: latency_table.tex  level1_stream_response.npz  level2_ensemble_size_ablation.csv  level3_uncertainty_drift_detector.npz  level4_deep_stream_response.npz  manifest.json
experiments/river_uncertainty/results/exploratory/: agrawal_transition_zoo.parquet
experiments/river_uncertainty/scripts/: agrawal_transition_zoo.py  compare_agrawal_drifts.py  compare_k.py  explore_new_streams.py  plot_results.py  plot_stream.py  run_experiment.py  run_listing_demo.py  run_paper_experiment.py  run_stream.py  scan_agrawal_functions.py
experiments/river_uncertainty/src/river_uncertainty/: __init__.py  deep_classifier.py  deep_networks.py  deep_representation.py  experiment.py  paths.py  plotting.py  representation.py  stream.py
experiments/river_uncertainty/src/river_uq/: __init__.py  detectors.py  models.py  plotting.py  prequential.py  streams.py  tables.py
experiments/river_uncertainty/tests/: test_detectors.py  test_models.py  test_plotting.py  test_prequential.py  test_representation.py  test_smoke.py  test_streams.py  test_tables.py
experiments/rl_uncertainty/: .gitignore  PROGRESS.md  __init__.py
experiments/rl_uncertainty/agents/: __init__.py  dqn.py
experiments/rl_uncertainty/envs/: __init__.py  base.py  continuous_nav.py  racetrack.py
experiments/rl_uncertainty/risk/: __init__.py  lcb.py  penalized.py
experiments/rl_uncertainty/scripts/: __init__.py  evaluate.py  plot_figure.py  train.py
experiments/rl_uncertainty/tests/: __init__.py  test_dqn.py  test_envs.py  test_uncertainty.py
experiments/rl_uncertainty/uncertainty/: __init__.py  credal.py  ensemble.py  interface.py
experiments/rl_uncertainty/viz/: __init__.py  decomposition.py  heatmap.py  trajectories.py  triptych.py
experiments/stacking/: .gitignore  README.md  pyproject.toml
experiments/stacking/results/: aggregated.json  stacking_methods_summary.json
experiments/stacking/results/credal_member_calibration/dinov2_with_registers/: seed0.json  seed1.json  seed2.json
experiments/stacking/results/credal_member_calibration/siglip2/: seed0.json  seed1.json  seed2.json
experiments/stacking/results/credal_wrapper_stack/dinov2_with_registers/isotonic/: seed0.json  seed1.json  seed2.json
experiments/stacking/results/credal_wrapper_stack/dinov2_with_registers/label_relaxation/: seed0.json  seed1.json  seed2.json
experiments/stacking/results/credal_wrapper_stack/dinov2_with_registers/none/: seed0.json  seed1.json  seed2.json
experiments/stacking/results/resnet_credal_per_member_T/: cifar10h.json  seed0.json
experiments/stacking/scripts/: aggregate_results.py  cache_cifar10h_embeddings.py  stack_credal_member_calibration.py  stack_credal_wrapper_temp_conformal.py  stack_dare_temp_conformal.py  stack_hetnet_temp_conformal.py  stack_natpn_ensemble.py  stack_resnet_credal_per_member_T.py
experiments/stacking/src/stacking/: calibration_modes.py  data.py  embed.py  models.py  utils.py
experiments/stacking/src/stacking/_encoders/: dinov2_with_registers.py  siglip2.py
experiments/stacking/src/stacking/datasets/: cifar10h_embeddings.py  two_moons.py
experiments/stacking/tests/: test_cifar10h_embeddings.py  test_data.py  test_embed.py  test_encoders.py  test_models.py  test_smoke.py  test_two_moons.py  test_utils.py
web/backend/: pyproject.toml
web/backend/app/: gemma.py  main.py  mock.py  mock_script.json  schemas.py
web/backend/app/routes/: chat.py
(+3472 files in other folders)
