[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probly"
dynamic = ["version", "readme"]
description = "Uncertainty Representation and Quantification for Machine Learning"
license = "MIT"
requires-python = ">=3.13.0,<3.15"
dependencies = [
    "scipy>=1.14.1",        # first cp313 wheels
    "matplotlib>=3.9.2",
    "mpltern>=0.6.0",
    "numpy>=2.1.0",         # first cp313 wheels
    "tqdm>=4.25.0",
    "joblib>=1.1.0",
]
authors = [
    { name = "Paul Hofman", email = "paul.hofman@ifi.lmu.de" },
    { name = "Timo Löhr" },
    { name = "Maximilian Muschalik" },
    { name = "Clemens Damke" },
    { name = "Alireza Javanmardi" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
]

[tool.setuptools.packages.find]
where = ["./src"]
include = ["probly*", "pytraverse*", "flextype*"]

[tool.setuptools.dynamic]
version = { attr = "probly.__version__" }
readme = { file = [
    "README.md",
    "CHANGELOG.md",
], content-type = "text/markdown" }

[project.urls]
documentation = "https://pwhofman.github.io/probly"
source = "https://github.com/pwhofman/probly"
tracker = "https://github.com/pwhofman/probly/issues"
changelog = "https://github.com/pwhofman/probly/blob/main/CHANGELOG.md"


[dependency-groups]
torch = [
    "torch>=2.6.0",         # first cp313 wheels
    "torchvision>=0.21.0"
]
jax = [
    "jax>=0.8.1",
    "flax>=0.12.4"
]
sklearn = [
    "scikit-learn>=1.5.2"  # first cp313 wheels
]
all_ml = [{ include-group = "torch" }, { include-group = "jax" }, { include-group = "sklearn" }]
test = [
    "pytest>=8.3.5",       # for testing
    "pytest-cov>=6.0.0",   # for coverage
    "pytest-xdist>=3.6.1", # for parallel testing
    "packaging",           # for version parsing
    # TODO: sklearn is only needed by tests until the calibration and conformal
    # modules stop importing it directly, and until probly.metrics no longer
    # needs sklearn as a reference oracle. Remove this include once those
    # migrations are done.
    { include-group = "sklearn" },
]
lint = [
    "ruff>=0.15.11",                                         # for linting
    "prek>=0.3.8",                                          # for running the linters pre-commit hooks
    "ty>=0.0.29",                                           # for static type checking
    "sigx @ git+https://github.com/Cortys/sigx.git@master",
]
docs = [
    "sphinx>=9.0.0",
    "sphinx-gallery",               # for the example gallery
    "furo",                         # theme
    "sphinx-copybutton",            # adds copy buttons to code blocks
    "sphinxcontrib-bibtex>=2.0.0",  # for bibliography support
]
benchmark = [
    "wandb>=0.25.1",
    "hydra-core>=1.3.1",
    "webdataset>=1.0.2",
    "nvidia-ml-py==13.595.45",
    "torch<2.11.0",
    "torchvision<0.26.0",
    "pytorch-optimizer>=3.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
    { include-group = "all_ml" },
    { include-group = "benchmark" },
]


[tool.ruff]
line-length = 120
target-version = "py313"
output-format = "full"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs/build",
    "supporting_files",
    "examples",
    "*.pyi",
]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "N812",    # Checks for lowercase imports that are aliased to non-lowercase names (e.g. torch.nn.functional as F)
    "RET504",  # Unnecessary assignment to {name} before return statement
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "FBT",     # enforce keyword for bool
    "PLR0913", # too many arguments (>5)
    "FIX002",  # TODOs are fine in code
    "COM812",
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",
    "INP001",
    "D101",
    "D102",
    "D103",
    "D404",
    "ANN001",
    "ANN201",
    "ANN202",
    "FBT001",
    "D100",
    "PLR2004",
    "PD901",
    "TCH",
    "N803",
    "C901",
]
"tests/pytraverse/**/*.py" = ["ARG001"]
"__init__.py" = [
    "I002",    # to not need from __future__ import annotations
    "PLC0414", # to allow import module as module in inits, contradicts F401
]
"*.ipynb" = [
    "T20",
    "NPY002",
    "I002",
    "D101",
    "D103",
    "PERF401", # it's fine to have non-optimized code in notebooks
]
"docs/**/*.py" = ["INP001", "PTH", "I002"]
"src/probly_benchmark/*.py" = ["T201"]

[tool.ruff.lint.mccabe]
max-complexity = 15

# Use isort-compatible settings
[tool.ruff.lint.isort]
known-first-party = ["probly", "probly_benchmark", "pytraverse", "flextype"]
known-third-party = ["wandb"]
force-sort-within-sections = true
combine-as-imports = true
force-single-line = false
no-lines-before = ["future"]
required-imports = ["from __future__ import annotations"]
extra-standard-library = ["typing_extensions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "8.0"
addopts = [
    "--import-mode=importlib", # to avoid issues with lazy imports
]

[tool.coverage.run]
source = ["probly"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "\\s*\\.\\.\\.\\s*",
]
exclude_lines = ["if TYPE_CHECKING"]

[tool.ty.src]
exclude = ["notebooks", "docs", "supporting_files", "examples", "stubs"]

[tool.ty.environment]
extra-paths = ["./stubs"]

[[tool.ty.overrides]]
include = ["tests/probly/**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
