[project]
name = "probly-experiments"
version = "0.0.0"
description = "Scratch environment for probly experiments (not shipped)."
requires-python = ">=3.13.0,<3.15"
dependencies = [
    "probly",
    "transformers>=4.45.0",
    "torch>=2.6.0",
    "huggingface-hub>=0.24.0",
    "accelerate>=0.34.0",
]

[tool.uv.sources]
probly = { path = "..", editable = true }
