[project]
name = "probly-experiments"
version = "0.0.0"
description = "Scratch environment for probly experiments (not shipped)."
requires-python = ">=3.13.0,<3.15"
dependencies = [
    "probly",
    "transformers>=4.45.0",
    "torch>=2.6.0",
    "huggingface-hub>=0.24.0",
    "accelerate>=0.34.0",
    "sentencepiece>=0.2.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "datasets>=2.14.0",
    "entmax>=1.3",
    "torchvision>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.uv.sources]
probly = { path = "..", editable = true }
