[project]
name = "probly-first-order-data-experiments"
version = "0.0.0"
description = "Local environment for first-order data experiments."
requires-python = ">=3.13.0,<3.15"
dependencies = [
    "probly",
    "entmax>=1.3",
    "numpy",
    "scipy>=1.14.0",
    "torch>=2.6.0",
    "torchvision>=0.26.0",
    "tqdm",
]

[tool.uv]
package = false

[tool.uv.sources]
probly = { path = "../..", editable = true }
