[project]
name = "gemma-experiment"
version = "0.1.0"
description = "Experiment: semantic entropy and calibration with Gemma 4 using probly."
requires-python = ">=3.13"
dependencies = [
    "probly",
    "transformers>=4.45.0",
    "torch>=2.6.0",
    "huggingface-hub>=0.24.0",
    "accelerate>=0.34.0",
    "sentencepiece>=0.2.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "datasets>=2.14.0",
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma_experiment"]

[tool.uv.sources]
probly = { path = "../..", editable = true }
