[project]
name = "gpn-uq"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "probly",
  "torch>=2.6.0",
  "torch-geometric>=2.6.0",
  "numpy",
  "matplotlib",
  "networkx>=3.6",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
probly = { path = "../..", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/gpn_uq"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
