[project]
name = "river-uncertainty"
version = "0.1.0"
description = "Experiment: uncertainty quantification for river online learners using probly representations."
requires-python = ">=3.13"
dependencies = [
    "river>=0.21",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "torch>=2.6.0",
    "probly",
]

[tool.uv.sources]
# This experiment lives inside the probly repo but is NOT part of the probly
# package. It pulls probly as an editable local dependency from the repo root.
probly = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/river_uncertainty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
