[project]
name = "river-uq"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "river>=0.21",
  "probly",
  "torch>=2.5",
  "numpy",
  "matplotlib",
  "pandas",
  "pyarrow",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
probly = { path = "../..", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/river_uq"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
